[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "armis"
dynamic = ["version", "dependencies"]
description = "Connect and perform actions with the Armis cloud"
readme = "README.md"
requires-python = ">=3.9"


keywords = ["armis", "api", "development"]

authors = [{ name = "Matthew Lange", email = "mmlange@gmail.com" }]
maintainers = [{ name = "Matthew Lange", email = "mmlange@gmail.com" }]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Communications",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]


[project.urls]
"Homepage" = "https://github.com/mmlange/armis-python/"
"Issues" = "https://github.com/mmlange/armis-python/issues"
"Source" = "https://github.com/mmlange/armis-python/"


[tool.hatch.version]
path = "src/armis/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest", "python-dotenv"]

[tool.hatch.envs.default.scripts]
test = "pytest -rExXsP {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]


[tool.hatch.build.targets.sdist]
exclude = [
  "private*",
  ".coverage_report",
  "coverage_report",
  "docs/",
  "pytest.ini",
  ".dev",
  ".github",
  "mkdocs.yml",
]
